# cpp-sample

./: .gitignore  .gitlab-ci.yml  Jenkinsfile  README.md  build.sh  codefresh.yml  conan-configure.sh  conanfile.py  docker-compose.yml  parser.py  sonar-project.properties  test2
profiles/: armv7  armv8  windows  x86  x86_64
scripts/: config.sh  requirements.txt  version.py
src/: CMakeLists.txt  main.cc
src/app/: CMakeLists.txt  factorial.cc  factorial.h
src/test/: CMakeLists.txt  main.cc
